# spl-faucet

./: .gitignore  Cargo.toml  README.md  slides.md
backend/: Cargo.toml
backend/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
frontend/: Cargo.toml
frontend/src/: main.rs
src/: instruction.rs  lib.rs  main.rs  prelude.rs  processor.rs
