[package]
name = "stamm"
version = "0.1.0"
authors = ["wentbroke <78487042+wentbroke@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
solana-program = "1.5.11"
thiserror = "1.0.24"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }
bincode = "1.3.2"
serde = { version = "1.0", features = ["derive"] } 

[lib]
crate-type = ["cdylib", "lib"]
