[package]
name = "stamm-frontend"
version = "0.1.0"
authors = ["wentbroke <78487042+wentbroke@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
solana-client = "1.5.11"
solana-sdk = "1.5.11"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }
bincode = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stamm-backend = { path = "../backend" }